src/test/ui/codemap_tests/two_files.stderr
error[E0404]: expected trait, found type alias `Bar`
  --> $DIR/two_files.rs:5:6
   |
LL | impl Bar for Baz { }
   |      ^^^ not a trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0404`.
